--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -26,13 +26,13 @@
             android:text="Back" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/searchbarID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="text"
-            android:text="Name" />
+            android:hint="Search" />
     </LinearLayout>
 
     <ScrollView
@@ -83,7 +83,7 @@
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/btnCart1ID"
+                        android:id="@+id/btnCart3ID"
                         android:layout_width="209dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -95,7 +95,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/addQuantityID"
+                            android:id="@+id/addQuantity3ID"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -103,7 +103,7 @@
                             android:text="+" />
 
                         <Button
-                            android:id="@+id/subtractQuantityID"
+                            android:id="@+id/subtractQuantity2ID"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -121,7 +121,7 @@
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="33dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Lily" />
@@ -133,16 +133,268 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/ic_action_name" />
 
-                <Button
-                    android:id="@+id/btnCart2ID"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Add to Cart" />
+                    android:orientation="vertical">
 
+                    <Button
+                        android:id="@+id/btnCartID"
+                        android:layout_width="211dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Add to Cart" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/addQuantityID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="+" />
+
+                        <Button
+                            android:id="@+id/subtractQuantity4ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="-" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Tulip" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="129dp"
+                    android:layout_height="135dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_action_name" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnCart5ID"
+                        android:layout_width="209dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:text="Add to Cart" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/addQuantity5ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="start"
+                            android:text="+" />
+
+                        <Button
+                            android:id="@+id/subtractQuantity5ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="end"
+                            android:text="-" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Peony" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="129dp"
+                    android:layout_height="135dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_action_name" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnCart6ID"
+                        android:layout_width="209dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:text="Add to Cart" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/addQuantity6ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="start"
+                            android:text="+" />
+
+                        <Button
+                            android:id="@+id/subtractQuantity6ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="end"
+                            android:text="-" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Daisy" />
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="129dp"
+                    android:layout_height="135dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_action_name" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnCart7ID"
+                        android:layout_width="209dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:text="Add to Cart" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/addQuantity7ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="start"
+                            android:text="+" />
+
+                        <Button
+                            android:id="@+id/subtractQuantity7ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="end"
+                            android:text="-" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Iris" />
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="129dp"
+                    android:layout_height="135dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_action_name" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btnCart8ID"
+                        android:layout_width="209dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"
+                        android:text="Add to Cart" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/addQuantity8ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="start"
+                            android:text="+" />
+
+                        <Button
+                            android:id="@+id/subtractQuantity8ID"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_gravity="end"
+                            android:text="-" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
             </LinearLayout>
 
-        </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
