--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -57,6 +57,12 @@
                 android:layout_height="wrap_content"
                 android:text="Go to Cart" />
 
+            <Button
+                android:id="@+id/checkOrderID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Check Active Orders" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
