--- a/app/src/main/res/layout/activity_orders_view.xml
+++ b/app/src/main/res/layout/activity_orders_view.xml
@@ -57,4 +57,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/order_item" />
 
+    <TextView
+        android:id="@+id/emptyOrdersView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="No orders found"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buttonBackID" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
